<resources>
    <string name="app_name">AppCompras</string>
    <string name="Titulo">Sistema de Compras</string>
    <string name="subTitulo">Selecione os produtos:</string>
    <string name="checkArroz">Arroz 1 Kg (R$ 2,69)</string>
    <string name="checkLeite">Leite longa vida (R$ 2,70</string>
    <string name="checkCarne">Carne Friboi (R$ 16,70)</string>
    <string name="checkFeijao">Feijão carioquinha 1 Kg (R$ 3,38)</string>
    <string name="checkRefrigerante">Refrigerante coca-cola 2 litros (R$3,00)</string>
    <string name="BtnTotal">Total da Compra</string>
    <string name="txtResultado">Total: R$ 0.00</string>

</resources>